--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,27 @@
 *{
   border: 1px dotted black;
-  background-color: green;
+  background-color: salmon;
 }
 header {
   font-family: 'Rammetto One', cursive;
   width: 100%;
-  background-color: blue;
+  background-color: bisque;
   font-size: 55px;
   text-align: center;
 }
 #salmonLogo {
-  align-content: center;
+  margin-left: 15%;
   border: 3px dotted white;
-  width: 100%;
+  width: 70%;
+}
+body {
+  align-content: center;
 }
 #tableH {
   background-color: white;
   text-align: center;
+  width: 450px;
+  border: 2px solid black;
 }
 th, td {
   border: 2pt solid black;
