--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-*{
-  border: 1px dotted black;
-  background-color: salmon;
-}
+
 header {
   font-family: 'Rammetto One', cursive;
   width: 100%;
@@ -13,9 +10,25 @@ header {
   margin-left: 15%;
   border: 3px dotted white;
   width: 70%;
+  background-color: salmon;
 }
-body {
-  align-content: center;
+div {
+  text-align: center;
+  line-height: 35px;
+  font-size: 25;
+  float: left;
+  padding:10px;
+  border: 3px solid black;
+  background-color: bisque;
+  margin-left: 40%;
+}
+section {
+  background-color: Rgba(69,74,92,0.9);
+  border: 3px solid hsla(199, 29%, 77%, 0.37);
+  border-radius: 25px;
+  color: white;
+  text-align: left;
+  padding: 7px;
 }
 #tableH {
   background-color: white;
@@ -28,7 +41,4 @@ th, td {
   padding: 5px;
   text-align: left;
   background-color: white;
-}
-tr.even {
-  background-color: bisque;
 }
