--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ header {
   width: 70%;
   background-color: salmon;
 }
+#hours {
+  margin-left: 13%;
+}
 div {
   text-align: center;
   line-height: 35px;
@@ -20,7 +23,9 @@ div {
   padding:10px;
   border: 3px solid black;
   background-color: bisque;
-  margin-left: 40%;
+  width: 35%;
+  max-height: 30px;
+
 }
 section {
   background-color: Rgba(69,74,92,0.9);
@@ -29,7 +34,11 @@ section {
   color: white;
   text-align: left;
   padding: 7px;
+  margin-top: 20%;
 }
+
+
+/* Non-consumer facing page */
 #salesPage {
   background-color: salmon;
 }
@@ -52,4 +61,9 @@ td {
   padding: 5px;
   text-align: left;
   background-color: white;
+}
+form {
+  background-color: gray;
+  margin-left:20%;
+  width: 100%;
 }
