--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 
-header {
+/* header {
   font-family: 'Rammetto One', cursive;
   width: 100%;
   background-color: bisque;
@@ -35,35 +35,52 @@ section {
   text-align: left;
   padding: 7px;
   margin-top: 20%;
-}
+} */
 
 
 /* Non-consumer facing page */
-#salesPage {
-  background-color: salmon;
+#charts{
+  background-color: gray;
 }
-#tableH {
-  background-color: white;
-  text-align: center;
-  width: 450px;
-  border: 2px solid black;
-  margin-left: 20%;
+
+#tableH{
+    background-color: white;
+    text-align: center;
+    width: 500px;
+    border: 2px solid black;
+    margin-left: 20%;
 }
-#tableCookieSales {
-  margin-left: 20%;
-}
-th{
-  border: 2pt dashed black;
-  background-color: bisque;
-}
-td {
-  border: 2pt solid black;
-  padding: 5px;
-  text-align: left;
-  background-color: white;
+
+ul {
+  list-style: none;
 }
 form {
-  background-color: gray;
-  margin-left:20%;
-  width: 100%;
+ border: none;
+ float: left;
+ text-align: right;
+ background-color: white;
 }
+table {
+  background: #fff;
+  border-spacing: 0;
+  
+}
+table tr:first-child {
+  background: salmon;
+}
+table tr:nth-child(even) {
+  background: #ddd;
+}
+table tr:last-child {
+  background: salmon;
+}
+table td {
+  padding:  .5em;
+  border-bottom: 1px solid black;
+  border-right: .1em solid black;
+}
+th {
+  border: 2px solid black;
+}
+
+
